# midnight-cowork

./: .gitignore  AGENTS.md  README.md  create_shortcuts.vbs  main.py  pyproject.toml  requirements.txt  start.bat  stop.bat  stop_server.py  whatsapp_setup.py
app/: __init__.py  config.py  models.py  storage.py
app/routes/: chat.py  settings.py  system.py  telegram.py  whatsapp.py
app/services/: interpreter.py  telegram.py  whatsapp.py  workflows.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_routes.py  test_storage.py
whatsapp/: index.js  package.json
